_includes/manuals/3.1/4.1.4_auditing.md

Foreman supports auditing of almost all changes that happen within Foreman, from both the UI and from the API. Auditing is done at a user level, and is thus ineffective if _:login:_ is set to _false_, as all audits will be done as the 'admin' user.


#### Basic View


Go to the Audit tab to see a view of what has changed. This view can be
filtered by the type of change or by the object that was altered (e.g. search
for a hostname to see all changes relating to that host). You also get the
parent object - so if a parameter was modified, you can see what host/group that parameter belongs to. The timestamp of the change and the user who performed it will be listed.


#### Extended Audits for Templates


Template changes also store a diff of the changes, and the ability to roll back to a previous version of the template.

#### Expire old audits automatically

You will probably want to delete your old audits after some time. To achieve this, there is a cronjob. This job invokes 
rake task `audits:expire`. There is no default value for number of days to keep because every user has different needs. 
However, you can configure an amount of days to keep in Foreman in Settings (`Administer -> Settings -> General (Tab) -> Save audits interval`) to fit to your needs. You can leave value empty to no expire old audits. Also this task can be invoked manually whenever required. Invocation can be done by `foreman rake audits:expire`. If the `days` parameter is not provided, the task is trying to take configured value from `Settings`. If this value is also empty, task is closed and no audits are expired. 

Available parameters:
* days => number of days to keep audits (defaults to 90)

Examples:
1. Expires all audits older then 7 days

		<pre>foreman-rake audits:expire days=7</pre>


#### Anonymize old audits

Here, anonymization clears links to user accounts and their IP addresses, but keeps all other audit data in database.

You can anonymize your old audits instead of deleting the audit entries.
Use task `foreman-rake audits:anonymize` for this similarly to `audits:expire`.

Example:

1. Anonymizes all audits older then 7 days

		<pre>foreman-rake audits:anonymize days=7</pre>

#### Organizations and Locations

Audits inherit organizations and locations of resources for which they have been created. Imagine you have a subnet assigned to organization A. Whenever you modify this subnet, the audit will be visible only in organization A. When you later add this subnet to organization B, new audits will appear in both organizations A and B. All audits created previously remain untouched. Resources that can't be assigned to any organization or location will be always visible in all organizations and locations, meaning the change has affected all organizations and locations.

#### Audit history

Audited resources can change in time, e.g. they have new attributes. Also audit definitions changes, e.g. new association starts to be tracked in new version of Foreman. All these changes only apply to newly created audits, old audits can't be updated and will always contain only data known back in time they were created. Starting with Foreman 1.20, audits are scoped to organizations and locations. All audits created before are unassigned, meaning only admin can see them.
